--- a/psychMasterLogic.ipynb
+++ b/psychMasterLogic.ipynb
@@ -47,7 +47,7 @@
     "from langchain_groq import ChatGroq\n",
     "llm = ChatGroq (\n",
     "    temperature =0,\n",
-    "    groq_api_key =\"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\", \n",
+    "    groq_api_key =\"XXXXXXXXXXXXX\", \n",
     "    model_name =\"llama-3.3-70b-versatile\"\n",
     ")\n",
     "\n",
